# friendly-umbrella

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: friendly-umbrella-deploy.yml  helloworld.yaml
db_consumer/templates/db_consumer/: index.html
friendly_umbrella/: asgi.py  helm-eks.py  settings.py  urls.py  wsgi.py
helm/: values.yaml
helm/templates/: configmap.yaml  deployment.yaml
